--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@iconify/tailwind": "^1.1.1",
     "@nuxt/devtools": "latest",
     "@nuxt/ui": "^2.17.0",
     "nuxt": "^3.12.2"
+  },
+  "dependencies": {
+    "radix-vue": "^1.8.5"
   }
 }
